Bug 1928395 [wpt PR 48909] - Use css syntax stream parser in attr(), a=testonly
Automatic update from web-platform-tests
Use css syntax stream parser in attr()

With recent modifications in attr() spec [0], <attr-type> is now
replaced with <syntax> [1], so replaced css_attr_type with css syntax
stream parser.
Since <dimension-unit> is not part of <syntax>, temporary remove tests
with dimension unit types until the spec issue [2] will be resolved.

[0] https://drafts.csswg.org/css-values-5/#attr-notation>
[1] https://drafts.csswg.org/css-values-5/#css-syntax
[2] https://github.com/w3c/csswg-drafts/issues/11034

Bug: 369858674, 40320391
Change-Id: I865c8cf5c848339a9766be0a04c5dc3f94983878
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5975668
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Commit-Queue: Munira Tursunova <mooniragoogle.com>
Cr-Commit-Position: refs/heads/main{#1376296}

--

wpt-commits: e0217e09fb4256ee8a6f80b0b70d07a0db249d6f
wpt-pr: 48909

UltraBlame original commit: 74c36a663b9e33fdfea0e92013f0e534a2ac37cd

--- a/testing/web-platform/tests/css/css-values/attr-color-invalid-cast.html
+++ b/testing/web-platform/tests/css/css-values/attr-color-invalid-cast.html
@@ -28,12 +28,10 @@ and
 Units
 Test
 :
-attr
+Attribute
+references
 (
-)
-in
-max
-(
+colors
 )
 <
 /
@@ -49,22 +47,20 @@ assert
 content
 =
 "
-The
-attr
-(
-)
-function
-notation
-is
-allowed
-inside
-a
-max
-(
-)
-notation
-.
+Invalid
+color
+values
+in
+referenced
+attributes
+are
+replaced
+by
+the
+fallback
+value
 "
+/
 >
 <
 link
@@ -76,19 +72,23 @@ author
 title
 =
 "
-Fuqiao
-Xue
+Fran
+ois
+REMY
 "
 href
 =
 "
 mailto
 :
-xfq
-w3
+fremycompany
 .
-org
+developer
+yahoo
+.
+fr
 "
+/
 >
 <
 link
@@ -100,17 +100,19 @@ help
 href
 =
 "
-https
+http
 :
 /
 /
-drafts
+www
 .
-csswg
+w3
 .
 org
 /
-css
+TR
+/
+css3
 -
 values
 /
@@ -119,36 +121,7 @@ attr
 -
 notation
 "
->
-<
-link
-rel
-=
-"
-help
-"
-href
-=
-"
-https
-:
 /
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-values
-/
-#
-calc
--
-notation
-"
 >
 <
 link
@@ -170,9 +143,17 @@ green
 .
 html
 "
+/
 >
 <
 style
+type
+=
+"
+text
+/
+css
+"
 >
 html
 body
@@ -206,30 +187,32 @@ relative
 ;
 background
 :
-green
+red
+;
+width
+:
+200px
+;
+height
+:
+200px
 ;
 }
 #
 outer
 {
-width
+background
 :
-max
-(
 attr
 (
 data
 -
 test
 <
-length
+color
 >
+green
 )
-)
-;
-height
-:
-200px
 ;
 }
 <
@@ -255,7 +238,7 @@ data
 test
 =
 "
-200px
+qqffuutt
 "
 >
 <
