--- a/testing/web-platform/tests/css/css-values/attr-color-valid.html
+++ b/testing/web-platform/tests/css/css-values/attr-color-valid.html
@@ -31,7 +31,7 @@ Test
 Attribute
 references
 (
-pixels
+colors
 )
 <
 /
@@ -47,36 +47,27 @@ assert
 content
 =
 "
-When
-the
-fallback
+The
+value
 of
-a
-pixel
-attribute
-reference
-is
-invalid
 the
-declaration
+reference
+attribute
 is
-ignored
+used
+correctly
+in
+the
+layout
+when
+it
+'
+s
+a
+color
 .
 "
 /
->
-<
-meta
-name
-=
-"
-flags
-"
-content
-=
-"
-invalid
-"
 >
 <
 link
@@ -203,30 +194,31 @@ relative
 ;
 background
 :
-green
+red
+;
+width
+:
+200px
+;
+height
+:
+200px
 ;
 }
 #
 outer
 {
-width
-:
-200px
-;
-width
+background
 :
 attr
 (
 data
 -
 test
-px
-300
+<
+color
+>
 )
-;
-height
-:
-200px
 ;
 }
 <
@@ -252,7 +244,7 @@ data
 test
 =
 "
-300
+green
 "
 >
 <
