--- a/testing/web-platform/tests/css/css-values/attr-length-valid-zero-nofallback.html
+++ b/testing/web-platform/tests/css/css-values/attr-length-valid-zero-nofallback.html
@@ -28,12 +28,10 @@ and
 Units
 Test
 :
-attr
+Attribute
+references
 (
-)
-in
-max
-(
+length
 )
 <
 /
@@ -50,21 +48,27 @@ content
 =
 "
 The
-attr
-(
-)
-function
-notation
+value
+of
+referenced
+attribute
 is
-allowed
-inside
+used
+correctly
+as
 a
-max
+length
 (
+even
+if
+it
+'
+s
+0
 )
-notation
 .
 "
+/
 >
 <
 link
@@ -76,19 +80,23 @@ author
 title
 =
 "
-Fuqiao
-Xue
+Fran
+ois
+REMY
 "
 href
 =
 "
 mailto
 :
-xfq
-w3
+fremycompany
 .
-org
+developer
+yahoo
+.
+fr
 "
+/
 >
 <
 link
@@ -100,17 +108,19 @@ help
 href
 =
 "
-https
+http
 :
 /
 /
-drafts
+www
 .
-csswg
+w3
 .
 org
 /
-css
+TR
+/
+css3
 -
 values
 /
@@ -119,36 +129,7 @@ attr
 -
 notation
 "
->
-<
-link
-rel
-=
-"
-help
-"
-href
-=
-"
-https
-:
 /
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-values
-/
-#
-calc
--
-notation
-"
 >
 <
 link
@@ -170,9 +151,17 @@ green
 .
 html
 "
+/
 >
 <
 style
+type
+=
+"
+text
+/
+css
+"
 >
 html
 body
@@ -210,12 +199,34 @@ green
 ;
 }
 #
+outer2
+{
+background
+:
+red
+;
+}
+#
 outer
 {
 width
 :
-max
-(
+200px
+;
+height
+:
+200px
+;
+}
+#
+outer2
+{
+width
+:
+200px
+;
+width
+:
 attr
 (
 data
@@ -224,7 +235,6 @@ test
 <
 length
 >
-)
 )
 ;
 height
@@ -250,12 +260,24 @@ id
 "
 outer
 "
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+outer2
+"
 data
 -
 test
 =
 "
-200px
+0
 "
 >
 <
