--- a/testing/web-platform/tests/css/css-values/attr-length-valid-zero.html
+++ b/testing/web-platform/tests/css/css-values/attr-length-valid-zero.html
@@ -28,10 +28,10 @@ and
 Units
 Test
 :
-Attributes
+Attribute
 references
 (
-pixels
+length
 )
 <
 /
@@ -47,24 +47,25 @@ assert
 content
 =
 "
-When
-the
+The
 value
 of
-the
 referenced
 attribute
 is
-not
-a
-pixel
-value
-the
-fallback
-value
-is
 used
-instead
+correctly
+as
+a
+length
+(
+even
+if
+it
+'
+s
+0
+)
 .
 "
 /
@@ -198,8 +199,32 @@ green
 ;
 }
 #
+outer2
+{
+background
+:
+red
+;
+}
+#
 outer
 {
+width
+:
+200px
+;
+height
+:
+200px
+;
+}
+#
+outer2
+{
+width
+:
+200px
+;
 width
 :
 attr
@@ -207,8 +232,10 @@ attr
 data
 -
 test
-px
-200px
+<
+length
+>
+0
 )
 ;
 height
@@ -234,12 +261,24 @@ id
 "
 outer
 "
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+outer2
+"
 data
 -
 test
 =
 "
-300px
+0
 "
 >
 <
