--- a/testing/web-platform/tests/css/css-values/attr-all-types.html
+++ b/testing/web-platform/tests/css/css-values/attr-all-types.html
@@ -187,160 +187,6 @@ div
 <
 script
 >
-const
-dimensionTypeToUnits
-=
-{
-"
-length
-"
-:
-[
-"
-em
-"
-"
-ex
-"
-"
-cap
-"
-"
-ch
-"
-"
-ic
-"
-"
-rem
-"
-"
-lh
-"
-"
-rlh
-"
-"
-vw
-"
-"
-vh
-"
-"
-vi
-"
-"
-vb
-"
-"
-vmin
-"
-"
-vmax
-"
-]
-"
-angle
-"
-:
-[
-"
-deg
-"
-"
-grad
-"
-"
-rad
-"
-"
-turn
-"
-]
-"
-time
-"
-:
-[
-"
-ms
-"
-"
-ms
-"
-]
-"
-frequency
-"
-:
-[
-"
-Hz
-"
-"
-kHz
-"
-]
-"
-flex
-"
-:
-[
-"
-fr
-"
-]
-}
-;
-const
-dimensionTypeToProperty
-=
-{
-"
-length
-"
-:
-[
-"
-width
-"
-]
-"
-angle
-"
-:
-[
-"
-font
--
-style
-"
-]
-"
-time
-"
-:
-[
-"
-transition
--
-duration
-"
-]
-"
-flex
-"
-:
-[
-"
-grid
--
-template
--
-columns
-"
-]
-}
 function
 test_valid_attr
 (
@@ -646,127 +492,72 @@ null
 )
 ;
 }
-function
-test_dimension_types_and_units
+test_valid_attr
 (
-)
-{
-for
+'
+content
+'
+'
+attr
 (
-const
-[
-type
-units
-]
-of
-Object
-.
-entries
-(
-dimensionTypeToUnits
+data
+-
+foo
 )
-)
-{
-const
-property
-=
-dimensionTypeToProperty
-[
-type
-]
-;
-const
-val
-=
+'
+'
+abc
+'
+'
 "
-3
+abc
 "
+'
+)
 ;
-units
-.
-forEach
+test_valid_attr
 (
-unit
-=
+'
+content
+'
+'
+attr
+(
+data
+-
+foo
+)
+'
+'
+abc
+'
+'
+"
+abc
+"
+'
+)
+;
+test_valid_attr
+(
+'
+content
+'
+'
+attr
+(
+data
+-
+foo
+<
+string
 >
-{
-const
-expectedValue
-=
-val
-+
-unit
-;
-const
-dimensionTypeAttrString
-=
-'
-attr
-(
-data
--
-foo
-'
-+
-type
-+
-'
-)
-'
-;
-test_valid_attr
-(
-property
-dimensionTypeAttrString
-expectedValue
-expectedValue
-)
-;
-const
-dimensionUnitAttrString
-=
-'
-attr
-(
-data
--
-foo
-'
-+
-unit
-+
-'
-)
-'
-;
-test_valid_attr
-(
-property
-dimensionUnitAttrString
-val
-expectedValue
-)
-;
-}
-)
-;
-}
-}
-test_valid_attr
-(
-'
-content
-'
-'
-attr
-(
-data
--
-foo
 )
 '
 '
+"
 abc
+"
 '
 '
 "
@@ -786,34 +577,15 @@ attr
 data
 -
 foo
-)
-'
-'
-abc
-'
-'
-"
-abc
-"
-'
-)
-;
-test_valid_attr
-(
-'
-content
-'
-'
-attr
-(
-data
--
-foo
+<
 string
+>
 )
 '
 '
+"
 abc
+"
 '
 '
 "
@@ -833,40 +605,20 @@ attr
 data
 -
 foo
+<
 string
+>
 )
-'
-'
-abc
 '
 '
 "
-abc
-"
-'
-)
-;
-test_valid_attr
-(
-'
-content
-'
-'
-attr
-(
-data
--
-foo
-string
-)
-'
-'
 attr
 (
 data
 -
 foo
 )
+"
 '
 '
 "
@@ -893,7 +645,11 @@ attr
 data
 -
 foo
+<
+custom
+-
 ident
+>
 )
 '
 '
@@ -917,7 +673,11 @@ attr
 data
 -
 foo
+<
+custom
+-
 ident
+>
 anim
 -
 fallback
@@ -948,7 +708,11 @@ attr
 data
 -
 foo
+<
+custom
+-
 ident
+>
 anim
 -
 fallback
@@ -977,7 +741,9 @@ attr
 data
 -
 foo
+<
 color
+>
 )
 '
 '
@@ -1001,7 +767,9 @@ attr
 data
 -
 foo
+<
 color
+>
 )
 '
 '
@@ -1027,7 +795,9 @@ attr
 data
 -
 foo
+<
 color
+>
 red
 )
 '
@@ -1052,7 +822,9 @@ attr
 data
 -
 foo
+<
 color
+>
 green
 )
 '
@@ -1077,7 +849,9 @@ attr
 data
 -
 foo
+<
 color
+>
 green
 )
 '
@@ -1090,7 +864,96 @@ rgb
 )
 '
 '
-green
+rgb
+(
+255
+0
+0
+)
+'
+)
+;
+test_valid_attr
+(
+'
+background
+-
+color
+'
+'
+attr
+(
+data
+-
+foo
+<
+color
+>
+)
+'
+'
+color
+-
+mix
+(
+in
+lch
+red
+pink
+)
+'
+'
+color
+-
+mix
+(
+in
+lch
+red
+pink
+)
+'
+)
+;
+test_valid_attr
+(
+'
+background
+-
+color
+'
+'
+attr
+(
+data
+-
+foo
+<
+color
+>
+)
+'
+'
+light
+-
+dark
+(
+#
+333b3c
+#
+efefec
+)
+'
+'
+light
+-
+dark
+(
+#
+333b3c
+#
+efefec
+)
 '
 )
 ;
@@ -1107,7 +970,9 @@ attr
 data
 -
 foo
+<
 number
+>
 )
 '
 '
@@ -1131,7 +996,9 @@ attr
 data
 -
 foo
+<
 number
+>
 30
 )
 '
@@ -1156,7 +1023,102 @@ attr
 data
 -
 foo
+<
 number
+>
+|
+lighter
+|
+bold
+bold
+)
+'
+'
+lighter
+'
+'
+lighter
+'
+)
+;
+test_valid_attr
+(
+'
+font
+-
+weight
+'
+'
+attr
+(
+data
+-
+foo
+<
+number
+>
+|
+lighter
+|
+bold
+lighter
+)
+'
+'
+10px
+'
+'
+lighter
+'
+)
+;
+test_valid_attr
+(
+'
+font
+-
+weight
+'
+'
+attr
+(
+data
+-
+foo
+<
+number
+>
+)
+'
+'
+calc
+(
+3
++
+3
+)
+'
+'
+6
+'
+)
+;
+test_valid_attr
+(
+'
+font
+-
+weight
+'
+'
+attr
+(
+data
+-
+foo
+<
+number
+>
 calc
 (
 10
@@ -1186,7 +1148,9 @@ attr
 data
 -
 foo
+<
 percentage
+>
 )
 '
 '
@@ -1212,12 +1176,45 @@ attr
 data
 -
 foo
+<
 percentage
+>
 10px
 )
 '
 '
 abc
+'
+'
+10px
+'
+)
+;
+test_valid_attr
+(
+'
+font
+-
+size
+'
+'
+attr
+(
+data
+-
+foo
+<
+percentage
+>
+|
+<
+length
+>
+10
+)
+'
+'
+10px
 '
 '
 10px
@@ -1237,7 +1234,9 @@ attr
 data
 -
 foo
+<
 percentage
+>
 abc
 )
 '
@@ -1260,7 +1259,9 @@ attr
 data
 -
 foo
+<
 length
+>
 )
 '
 '
@@ -1282,7 +1283,9 @@ attr
 data
 -
 foo
+<
 length
+>
 red
 )
 '
@@ -1305,7 +1308,9 @@ attr
 data
 -
 foo
+<
 length
+>
 42px
 )
 '
@@ -1318,7 +1323,7 @@ calc
 )
 '
 '
-42px
+4px
 '
 )
 ;
@@ -1335,7 +1340,9 @@ attr
 data
 -
 foo
+<
 angle
+>
 )
 '
 '
@@ -1359,7 +1366,9 @@ attr
 data
 -
 foo
+<
 angle
+>
 10deg
 )
 '
@@ -1384,7 +1393,9 @@ attr
 data
 -
 foo
+<
 angle
+>
 italic
 )
 '
@@ -1399,6 +1410,62 @@ italic
 test_valid_attr
 (
 '
+font
+-
+style
+'
+'
+attr
+(
+data
+-
+foo
+<
+angle
+>
+3deg
+)
+'
+'
+italic
+'
+'
+3deg
+'
+)
+;
+test_valid_attr
+(
+'
+font
+-
+style
+'
+'
+attr
+(
+data
+-
+foo
+<
+angle
+>
+|
+italic
+3deg
+)
+'
+'
+italic
+'
+'
+italic
+'
+)
+;
+test_valid_attr
+(
+'
 transition
 -
 duration
@@ -1409,7 +1476,9 @@ attr
 data
 -
 foo
+<
 time
+>
 )
 '
 '
@@ -1433,7 +1502,9 @@ attr
 data
 -
 foo
+<
 time
+>
 30s
 )
 '
@@ -1458,7 +1529,9 @@ attr
 data
 -
 foo
+<
 time
+>
 calc
 (
 10s
@@ -1478,143 +1551,6 @@ calc
 test_valid_attr
 (
 '
-grid
--
-template
--
-columns
-'
-'
-30px
-attr
-(
-data
--
-foo
-flex
-)
-'
-'
-1fr
-'
-'
-30px
-1fr
-'
-)
-;
-test_valid_attr
-(
-'
-grid
--
-template
--
-columns
-'
-'
-attr
-(
-data
--
-foo
-flex
-3fr
-)
-'
-'
-1fr
-1fr
-'
-'
-3fr
-'
-)
-;
-test_valid_attr
-(
-'
-grid
--
-template
--
-columns
-'
-'
-attr
-(
-data
--
-foo
-flex
-calc
-(
-1px
-+
-2px
-)
-)
-'
-'
-10px
-'
-'
-3px
-'
-)
-;
-test_valid_attr
-(
-'
-height
-'
-'
-attr
-(
-data
--
-foo
-px
-)
-'
-'
-10
-'
-'
-10px
-'
-)
-;
-test_valid_attr
-(
-'
-width
-'
-'
-calc
-(
-attr
-(
-data
--
-foo
-px
-)
-+
-1px
-)
-'
-'
-10
-'
-'
-11px
-'
-)
-;
-test_valid_attr
-(
-'
 -
 -
 x
@@ -1625,69 +1561,18 @@ attr
 data
 -
 foo
-px
+<
+number
+>
 )
-11px
+11
 '
 '
 10
 '
 '
-10px
-11px
-'
-)
-;
-test_valid_attr
-(
-'
-grid
--
-template
--
-columns
-'
-'
-attr
-(
-data
--
-foo
-fr
-)
-'
-'
 10
-'
-'
-10fr
-'
-)
-;
-test_valid_attr
-(
-'
-grid
--
-template
--
-columns
-'
-'
-attr
-(
-data
--
-foo
-fr
-3fr
-)
-'
-'
-10fr
-'
-'
-3fr
+11
 '
 )
 ;
@@ -1704,11 +1589,15 @@ attr
 data
 -
 foo
+<
 string
+>
 )
 '
 '
+"
 hello
+"
 '
 '
 "
@@ -1732,21 +1621,28 @@ attr
 data
 -
 foo
+<
 string
+>
++
 )
-'
-'
-hello
 '
 '
 "
 hello
 "
+"
+hi
+"
 '
-)
-;
-test_dimension_types_and_units
-(
+'
+"
+hello
+"
+"
+hi
+"
+'
 )
 ;
 test_invalid_attr
@@ -1762,7 +1658,78 @@ attr
 data
 -
 foo
+string
+)
+'
+'
+abc
+'
+)
+;
+test_invalid_attr
+(
+'
+animation
+-
+name
+'
+'
+attr
+(
+data
+-
+foo
+<
+string
+>
+)
+'
+'
+abc
+'
+)
+;
+test_invalid_attr
+(
+'
+animation
+-
+name
+'
+'
+attr
+(
+data
+-
+foo
+<
+string
+>
+)
+'
+'
+abc
+'
+)
+;
+test_invalid_attr
+(
+'
+animation
+-
+name
+'
+'
+attr
+(
+data
+-
+foo
+<
+custom
+-
 ident
+>
 )
 '
 '
@@ -1783,7 +1750,11 @@ attr
 data
 -
 foo
+<
+custom
+-
 ident
+>
 )
 '
 '
@@ -1806,7 +1777,41 @@ attr
 data
 -
 foo
+<
+custom
+-
 ident
+>
+)
+'
+'
+"
+none
+"
+'
+)
+;
+test_invalid_attr
+(
+'
+animation
+-
+name
+'
+'
+attr
+(
+data
+-
+foo
+<
+custom
+-
+ident
+>
+<
+ident
+>
 )
 '
 '
@@ -1829,15 +1834,15 @@ attr
 data
 -
 foo
+<
 color
+>
 )
 '
 '
 rgb
 (
 0
-255
-0
 )
 '
 )
@@ -1855,65 +1860,9 @@ attr
 data
 -
 foo
-color
-)
-'
-'
-color
--
-mix
-(
-in
-lch
+<
 red
-pink
-)
-'
-)
-;
-test_invalid_attr
-(
-'
-background
--
-color
-'
-'
-attr
-(
-data
--
-foo
-color
-)
-'
-'
-light
--
-dark
-(
-#
-333b3c
-#
-efefec
-)
-'
-)
-;
-test_invalid_attr
-(
-'
-background
--
-color
-'
-'
-attr
-(
-data
--
-foo
-red
+>
 )
 '
 '
@@ -1934,7 +1883,60 @@ attr
 data
 -
 foo
+<
+color
+>
+|
+<
 red
+>
+)
+'
+'
+abc
+'
+)
+;
+test_invalid_attr
+(
+'
+background
+-
+color
+'
+'
+attr
+(
+data
+-
+foo
+<
+color
+>
+|
+)
+'
+'
+abc
+'
+)
+;
+test_invalid_attr
+(
+'
+background
+-
+color
+'
+'
+attr
+(
+data
+-
+foo
+<
+red
+>
 )
 '
 '
@@ -1955,7 +1957,33 @@ attr
 data
 -
 foo
+<
 number
+>
+)
+'
+'
+10
+'
+)
+;
+test_invalid_attr
+(
+'
+font
+-
+size
+'
+'
+attr
+(
+data
+-
+foo
+<
+number
+>
+!
 )
 '
 '
@@ -1976,7 +2004,9 @@ attr
 data
 -
 foo
+<
 number
+>
 )
 '
 '
@@ -1987,9 +2017,7 @@ number
 test_invalid_attr
 (
 '
-font
--
-weight
+width
 '
 '
 attr
@@ -1997,16 +2025,14 @@ attr
 data
 -
 foo
+<
 number
+>
+30px
 )
 '
 '
-calc
-(
-1
-+
-3
-)
+10
 '
 )
 ;
@@ -2023,7 +2049,9 @@ attr
 data
 -
 foo
+<
 percentage
+>
 )
 '
 '
@@ -2044,7 +2072,9 @@ attr
 data
 -
 foo
+<
 percentage
+>
 )
 '
 '
@@ -2067,7 +2097,9 @@ attr
 data
 -
 foo
+<
 percentage
+>
 10rad
 )
 '
@@ -2079,7 +2111,9 @@ abc
 test_invalid_attr
 (
 '
-width
+font
+-
+size
 '
 '
 attr
@@ -2087,7 +2121,14 @@ attr
 data
 -
 foo
+<
+number
+>
+|
+<
 length
+>
+30px
 )
 '
 '
@@ -2106,7 +2147,30 @@ attr
 data
 -
 foo
+<
 length
+>
+)
+'
+'
+10
+'
+)
+;
+test_invalid_attr
+(
+'
+width
+'
+'
+attr
+(
+data
+-
+foo
+<
+length
+>
 30
 )
 '
@@ -2131,7 +2195,9 @@ attr
 data
 -
 foo
+<
 length
+>
 calc
 (
 10
@@ -2158,7 +2224,9 @@ attr
 data
 -
 foo
+<
 angle
+>
 )
 '
 '
@@ -2180,7 +2248,9 @@ attr
 data
 -
 foo
+<
 angle
+>
 )
 '
 '
@@ -2206,7 +2276,9 @@ attr
 data
 -
 foo
+<
 angle
+>
 calc
 (
 10
@@ -2238,7 +2310,9 @@ attr
 data
 -
 foo
+<
 time
+>
 )
 '
 '
@@ -2259,7 +2333,9 @@ attr
 data
 -
 foo
+<
 time
+>
 )
 '
 '
@@ -2281,7 +2357,9 @@ attr
 data
 -
 foo
+<
 time
+>
 )
 '
 '
@@ -2292,164 +2370,6 @@ calc
 2ms
 )
 s
-'
-)
-;
-test_invalid_attr
-(
-'
-grid
--
-template
--
-columns
-'
-'
-attr
-(
-data
--
-foo
-flex
-)
-'
-'
-10px
-'
-)
-;
-test_invalid_attr
-(
-'
-grid
--
-template
--
-columns
-'
-'
-attr
-(
-data
--
-foo
-flex
-)
-'
-'
-"
-30fr
-"
-'
-)
-;
-test_invalid_attr
-(
-'
-grid
--
-template
--
-columns
-'
-'
-attr
-(
-data
--
-foo
-flex
-calc
-(
-1deg
-+
-2deg
-)
-)
-'
-'
-10px
-'
-)
-;
-test_invalid_attr
-(
-'
-width
-'
-'
-attr
-(
-data
--
-foo
-px
-)
-'
-'
-10px
-'
-)
-;
-test_invalid_attr
-(
-'
-height
-'
-'
-attr
-(
-data
--
-foo
-fr
-)
-'
-'
-10
-'
-)
-;
-test_invalid_attr
-(
-'
-transition
--
-duration
-'
-'
-attr
-(
-data
--
-foo
-ms
-)
-'
-'
-10px
-'
-)
-;
-test_invalid_attr
-(
-'
-transition
--
-duration
-'
-'
-attr
-(
-data
--
-foo
-ms
-)
-'
-'
-10px
-foo
 '
 )
 ;
