--- a/testing/web-platform/tests/css/css-values/attr-length-invalid-cast.html
+++ b/testing/web-platform/tests/css/css-values/attr-length-invalid-cast.html
@@ -28,12 +28,10 @@ and
 Units
 Test
 :
-attr
+Attribute
+references
 (
-)
-in
-max
-(
+length
 )
 <
 /
@@ -49,22 +47,27 @@ assert
 content
 =
 "
-The
-attr
-(
-)
-function
-notation
-is
-allowed
-inside
+When
+the
+value
+of
+referenced
+attribute
+isn
+'
+t
 a
-max
-(
-)
-notation
+valid
+length
+the
+fallback
+value
+is
+unsed
+instead
 .
 "
+/
 >
 <
 link
@@ -76,19 +79,23 @@ author
 title
 =
 "
-Fuqiao
-Xue
+Fran
+ois
+REMY
 "
 href
 =
 "
 mailto
 :
-xfq
-w3
+fremycompany
 .
-org
+developer
+yahoo
+.
+fr
 "
+/
 >
 <
 link
@@ -100,17 +107,19 @@ help
 href
 =
 "
-https
+http
 :
 /
 /
-drafts
+www
 .
-csswg
+w3
 .
 org
 /
-css
+TR
+/
+css3
 -
 values
 /
@@ -119,36 +128,7 @@ attr
 -
 notation
 "
->
-<
-link
-rel
-=
-"
-help
-"
-href
-=
-"
-https
-:
 /
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-values
-/
-#
-calc
--
-notation
-"
 >
 <
 link
@@ -170,9 +150,17 @@ green
 .
 html
 "
+/
 >
 <
 style
+type
+=
+"
+text
+/
+css
+"
 >
 html
 body
@@ -214,8 +202,6 @@ outer
 {
 width
 :
-max
-(
 attr
 (
 data
@@ -224,7 +210,7 @@ test
 <
 length
 >
-)
+200px
 )
 ;
 height
@@ -255,7 +241,7 @@ data
 test
 =
 "
-200px
+qqffuutt
 "
 >
 <
