--- a/testing/web-platform/tests/css/css-values/attr-length-valid.html
+++ b/testing/web-platform/tests/css/css-values/attr-length-valid.html
@@ -28,12 +28,10 @@ and
 Units
 Test
 :
-attr
+Attribute
+references
 (
-)
-in
-max
-(
+length
 )
 <
 /
@@ -50,21 +48,19 @@ content
 =
 "
 The
-attr
-(
-)
-function
-notation
+value
+of
+referenced
+attribute
 is
-allowed
-inside
+used
+correctly
+as
 a
-max
-(
-)
-notation
+length
 .
 "
+/
 >
 <
 link
@@ -76,19 +72,23 @@ author
 title
 =
 "
-Fuqiao
-Xue
+Fran
+ois
+REMY
 "
 href
 =
 "
 mailto
 :
-xfq
-w3
+fremycompany
 .
-org
+developer
+yahoo
+.
+fr
 "
+/
 >
 <
 link
@@ -100,17 +100,19 @@ help
 href
 =
 "
-https
+http
 :
 /
 /
-drafts
+www
 .
-csswg
+w3
 .
 org
 /
-css
+TR
+/
+css3
 -
 values
 /
@@ -119,36 +121,7 @@ attr
 -
 notation
 "
->
-<
-link
-rel
-=
-"
-help
-"
-href
-=
-"
-https
-:
 /
-/
-drafts
-.
-csswg
-.
-org
-/
-css
--
-values
-/
-#
-calc
--
-notation
-"
 >
 <
 link
@@ -170,9 +143,17 @@ green
 .
 html
 "
+/
 >
 <
 style
+type
+=
+"
+text
+/
+css
+"
 >
 html
 body
@@ -214,8 +195,6 @@ outer
 {
 width
 :
-max
-(
 attr
 (
 data
@@ -224,7 +203,6 @@ test
 <
 length
 >
-)
 )
 ;
 height
