Bug 1928196 [wpt PR 48897] - Remove duplicate checkLayout util in WPT, a=testonly
Automatic update from web-platform-tests
Remove duplicate checkLayout util in WPT

In http://crrev.com/951195 I accidentally upstreamed a duplicate
checkLayout test function. This patch removes the duplicate and migrates
the one test which uses it to the other copy.

Context: https://github.com/web-platform-tests/wpt/issues/48705
Change-Id: Ic617e7aa7278cf365e42f40f4ed7c8ac80baccbb
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5947328
Reviewed-by: Christian Biesinger <cbiesingerchromium.org>
Reviewed-by: Di Zhang <dizhanggchromium.org>
Commit-Queue: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1376406}

--

wpt-commits: f26694cede6d5602f01e7f7762876ec43cf74951
wpt-pr: 48897

UltraBlame original commit: 609b09cfd7fe3073fa959e55de805a8fa1a8f8a9

--- a/testing/web-platform/tests/css/css-sizing/replaced-fractional-height-from-aspect-ratio.html
+++ b/testing/web-platform/tests/css/css-sizing/replaced-fractional-height-from-aspect-ratio.html
@@ -84,17 +84,48 @@ script
 src
 =
 "
-.
-.
 /
+resources
+/
+testharness
 .
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
 .
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
 /
 resources
 /
 check
 -
 layout
+-
+th
 .
 js
 "
