Bug 1928486 [wpt PR 48913] - Make <selectedoption> stop responding to mutations, a=testonly
Automatic update from web-platform-tests
Make <selectedoption> stop responding to mutations

This patch makes <selectedoption> stop using the MutationObserver for
<option>: https://github.com/openui/open-ui/issues/825

This patch also uncovered a small bug with the
selectedoptionelement attribute when assigning null to the IDL
attribute, which I fixed by removing a null check.

Bug: 336844298
Change-Id: I3fed171bf687cabb9474d8ff8741071c28bbad0b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5941575
Reviewed-by: Dominic Farolino <domchromium.org>
Commit-Queue: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/main{#1376573}

--

wpt-commits: ff425b2cbd0763d18844cf91cde9da9c8616f076
wpt-pr: 48913

UltraBlame original commit: 688bcc515efda530b98bbc4126888758fc431218

--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/selectedoption.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/selectedoption.tentative.html
@@ -388,6 +388,13 @@ changed
 '
 )
 ;
+let
+oldInnerHTML
+=
+optionTwo
+.
+innerHTML
+;
 spanTwo
 .
 textContent
@@ -409,16 +416,18 @@ assert_equals
 selectedOption
 .
 innerHTML
-optionTwo
-.
-innerHTML
+oldInnerHTML
 '
 <
 selectedoption
 >
 should
+not
 respond
 to
+<
+option
+>
 text
 content
 changes
@@ -452,14 +461,13 @@ assert_equals
 selectedOption
 .
 innerHTML
-optionTwo
-.
-innerHTML
+oldInnerHTML
 '
 <
 selectedoption
 >
 should
+not
 respond
 to
 new
@@ -468,6 +476,10 @@ being
 added
 to
 descendants
+of
+<
+option
+>
 .
 '
 )
@@ -498,14 +510,13 @@ assert_equals
 selectedOption
 .
 innerHTML
-optionTwo
-.
-innerHTML
+oldInnerHTML
 '
 <
 selectedoption
 >
 should
+not
 respond
 to
 attributes
@@ -513,6 +524,10 @@ being
 added
 to
 descendants
+of
+<
+option
+>
 .
 '
 )
@@ -809,6 +824,24 @@ option
 '
 )
 ;
+/
+/
+TODO
+(
+crbug
+.
+com
+/
+336844298
+)
+:
+Add
+tests
+for
+mutation
+records
+during
+parsing
 }
 '
 The
