--- a/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/selectedoptionelement-attr.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-select-element/customizable-select/selectedoptionelement-attr.tentative.html
@@ -364,6 +364,43 @@ selectedOptionElement
 =
 selectedoption
 ;
+assert_equals
+(
+selectedoption
+.
+innerHTML
+optionOne
+.
+innerHTML
+'
+Re
+-
+setting
+the
+selectedoptionelement
+attribute
+via
+IDL
+should
+synchronously
+assign
+the
+contents
+of
+<
+selectedoption
+>
+.
+'
+)
+;
+let
+oldInnerHTML
+=
+optionOne
+.
+innerHTML
+;
 optionOne
 .
 querySelector
@@ -389,9 +426,7 @@ assert_equals
 selectedoption
 .
 innerHTML
-optionOne
-.
-innerHTML
+oldInnerHTML
 '
 Mutating
 the
@@ -400,15 +435,13 @@ selected
 option
 >
 should
+not
 update
 the
 <
 selectedoption
 >
 contents
-after
-a
-microtask
 .
 '
 )
