Bug 1928673 [wpt PR 48929] - [nesting] Improve WPT coverage for top-level '&' specificity, a=testonly
Automatic update from web-platform-tests
[nesting] Improve WPT coverage for top-level '&' specificity

The '&' selector, when it has no parent selector to draw from,
has a specificity of zero [1].

Blink already does the right thing. This CL just adds a new WPT
to enforce that behavior, and adjusts an existing tests which
expected specificity to be added.

[1] https://github.com/w3c/csswg-drafts/issues/10196

Bug: 343794754
Change-Id: I3bfdba8a5db66be2d2cdd6f1b2f41b86aadbab9b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5982912
Reviewed-by: Steinar H Gunderson <sessechromium.org>
Commit-Queue: Anders Hartvoll Ruud <andruudchromium.org>
Cr-Commit-Position: refs/heads/main{#1376861}

--

wpt-commits: 664de243ddb3429237c7d5740b18d5495207c843
wpt-pr: 48929

UltraBlame original commit: 176e628634ddefcc55e4572b4fe5fa9ec27114de

--- a/testing/web-platform/tests/css/css-cascade/scope-specificity.html
+++ b/testing/web-platform/tests/css/css-cascade/scope-specificity.html
@@ -953,12 +953,41 @@ with
 implicit
 scope
 root
-uses
+matches
+the
+same
+elements
+/
+/
+as
 :
 scope
-which
-adds
+but
+does
+not
+add
+any
 specificity
+.
+/
+/
+https
+:
+/
+/
+github
+.
+com
+/
+w3c
+/
+csswg
+-
+drafts
+/
+issues
+/
+10196
 test_scope_specificity
 (
 [
@@ -973,7 +1002,11 @@ b
 ]
 '
 :
+where
+(
+:
 scope
+)
 .
 b
 '
