Bug 1928740 [wpt PR 48935] - Refactor slow tests in css/css-transitions., a=testonly
Automatic update from web-platform-tests
Refactor slow tests in css/css-transitions.

Very wasteful to simply let the animations run given the sheer number
of animations. This batch of tests also liberally uses setTimeout,
which is no longer permitted in WPT tests.

Added a step to catch when all transitions have started, then simply
sample the computed value at fixed values for animation.currentTime.
The animations are left running with currentTime aligned with the
end of the transition, which makes the transitionend events imminent.

Rather than time based, each step in the batch processing is promise
based.

Bug: 375377010,375587482

Change-Id: I8a071a9c5e0c99770d91acb24c8b67a745ace616
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5979045
Reviewed-by: Olga Gerchikov <gerchikomicrosoft.com>
Commit-Queue: Kevin Ellis <keverschromium.org>
Cr-Commit-Position: refs/heads/main{#1377078}

--

wpt-commits: 4c49b95cec2b74984aaf784cec30461194e6277d
wpt-pr: 48935

UltraBlame original commit: 12b6c4ebc390c7eb140e08918f9a0f151ee57f8c

--- a/testing/web-platform/tests/css/css-transitions/properties-value-003.html
+++ b/testing/web-platform/tests/css/css-transitions/properties-value-003.html
@@ -397,6 +397,18 @@ head
 body
 >
 <
+!
+-
+-
+required
+by
+testharnessreport
+.
+js
+-
+-
+>
+<
 div
 id
 =
@@ -407,6 +419,17 @@ log
 <
 /
 div
+>
+<
+!
+-
+-
+elements
+used
+for
+testing
+-
+-
 >
 <
 div
@@ -462,6 +485,54 @@ offscreen
 <
 /
 div
+>
+<
+!
+-
+-
+SEE
+.
+/
+support
+/
+README
+.
+md
+for
+an
+abstract
+explanation
+of
+the
+test
+procedure
+http
+:
+/
+/
+test
+.
+csswg
+.
+org
+/
+source
+/
+contributors
+/
+rodneyrehm
+/
+submitted
+/
+css3
+-
+transitions
+/
+README
+.
+md
+-
+-
 >
 <
 script
@@ -821,6 +892,18 @@ sliceStart
 generalParallelTest
 .
 sliceStart
+/
+/
+invoked
+after
+transitions
+have
+started
+transitionsStarted
+:
+generalParallelTest
+.
+transitionsStarted
 /
 /
 invoked
