--- a/testing/web-platform/tests/css/css-transitions/properties-value-002.html
+++ b/testing/web-platform/tests/css/css-transitions/properties-value-002.html
@@ -387,6 +387,18 @@ head
 body
 >
 <
+!
+-
+-
+required
+by
+testharnessreport
+.
+js
+-
+-
+>
+<
 div
 id
 =
@@ -397,6 +409,17 @@ log
 <
 /
 div
+>
+<
+!
+-
+-
+elements
+used
+for
+testing
+-
+-
 >
 <
 div
@@ -452,6 +475,54 @@ offscreen
 <
 /
 div
+>
+<
+!
+-
+-
+SEE
+.
+/
+support
+/
+README
+.
+md
+for
+an
+abstract
+explanation
+of
+the
+test
+procedure
+http
+:
+/
+/
+test
+.
+csswg
+.
+org
+/
+source
+/
+contributors
+/
+rodneyrehm
+/
+submitted
+/
+css3
+-
+transitions
+/
+README
+.
+md
+-
+-
 >
 <
 script
@@ -794,6 +865,18 @@ sliceStart
 generalParallelTest
 .
 sliceStart
+/
+/
+invoked
+after
+transitions
+have
+started
+transitionsStarted
+:
+generalParallelTest
+.
+transitionsStarted
 /
 /
 invoked
