--- a/testing/web-platform/tests/css/css-transitions/properties-value-inherit-003.html
+++ b/testing/web-platform/tests/css/css-transitions/properties-value-inherit-003.html
@@ -368,6 +368,18 @@ head
 body
 >
 <
+!
+-
+-
+required
+by
+testharnessreport
+.
+js
+-
+-
+>
+<
 div
 id
 =
@@ -378,6 +390,17 @@ log
 <
 /
 div
+>
+<
+!
+-
+-
+elements
+used
+for
+testing
+-
+-
 >
 <
 div
@@ -433,6 +456,54 @@ offscreen
 <
 /
 div
+>
+<
+!
+-
+-
+SEE
+.
+/
+support
+/
+README
+.
+md
+for
+an
+abstract
+explanation
+of
+the
+test
+procedure
+http
+:
+/
+/
+test
+.
+csswg
+.
+org
+/
+source
+/
+contributors
+/
+rodneyrehm
+/
+submitted
+/
+css3
+-
+transitions
+/
+README
+.
+md
+-
+-
 >
 <
 script
@@ -931,6 +1002,18 @@ sliceStart
 /
 invoked
 after
+transitions
+have
+started
+transitionsStarted
+:
+generalParallelTest
+.
+transitionsStarted
+/
+/
+invoked
+after
 running
 a
 slice
@@ -1188,14 +1271,15 @@ options
 {
 /
 /
-make
-sure
-there
-were
-no
-events
+font
+-
+size
+explicitly
+transitioned
 on
+the
 parent
+.
 test
 .
 step
