--- a/testing/web-platform/tests/webxr/events_input_sources_change.https.html
+++ b/testing/web-platform/tests/webxr/events_input_sources_change.https.html
@@ -72,6 +72,10 @@ script
 <
 script
 >
+"
+use
+strict
+"
 let
 testName
 =
@@ -209,6 +213,64 @@ session
 validateSameObject
 (
 event
+)
+;
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+event
+.
+added
+[
+0
+]
+=
+"
+test
+"
+;
+}
+"
+added
+array
+must
+be
+frozen
+"
+)
+;
+assert_throws_js
+(
+TypeError
+(
+)
+=
+>
+{
+event
+.
+removed
+[
+0
+]
+=
+"
+test
+"
+;
+}
+"
+removed
+array
+must
+be
+frozen
+"
 )
 ;
 /
