Bug 1928759 [wpt PR 48939] - Fix race condition and expectations for retargeted transition test, a=testonly
Automatic update from web-platform-tests
Fix race condition and expectations for retargeted transition test

Ironically, this test never actually tested transition retargeting
but passes only if the initial style change is bundled into the first
style update.

Fixed by forcing a style update before transform is set. This way,
the change to make the transformation 3D is actually a transition
retargeting. Naturally, expectations needed to be changed.

Verified on content_shell, headless_shell, Chrome, and Firefox.

Bug: 375286840
Change-Id: I1b1095b294e2c769b9a9d6c7802ef52648ccf56b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5984973
Reviewed-by: Olga Gerchikov <gerchikomicrosoft.com>
Commit-Queue: Kevin Ellis <keverschromium.org>
Cr-Commit-Position: refs/heads/main{#1377603}

--

wpt-commits: d4fb35c4980b6581ce0535b2dac71cbc62f4bd3d
wpt-pr: 48939

UltraBlame original commit: db2a5c49fec2dc7fe541e2ee57621b3b027a6ff3

--- a/testing/web-platform/tests/css/css-transitions/retargetted-transition-with-box-sizing.html
+++ b/testing/web-platform/tests/css/css-transitions/retargetted-transition-with-box-sizing.html
@@ -172,6 +172,31 @@ test
 =
 >
 {
+/
+/
+Force
+a
+style
+update
+ahead
+of
+the
+transform
+change
+.
+assert_equals
+(
+getComputedStyle
+(
+target
+)
+.
+transform
+'
+none
+'
+)
+;
 target
 .
 style
@@ -188,6 +213,46 @@ translate
 )
 '
 ;
+/
+/
+Ultimate
+target
+is
+50
+100
+which
+is
+half
+of
+width
+and
+height
+/
+/
+respectively
+.
+The
+translation
+puts
+us
+at
+the
+midpoint
+which
+is
+at
+/
+/
+(
+x
+y
+)
+=
+(
+25
+50
+)
+.
 assert_equals
 (
 getComputedStyle
@@ -203,8 +268,8 @@ matrix
 0
 0
 1
+25
 50
-100
 )
 '
 )
@@ -226,6 +291,26 @@ translate3D
 )
 '
 ;
+/
+/
+After
+retargetting
+we
+preserve
+the
+progress
+between
+the
+current
+value
+and
+/
+/
+and
+new
+target
+value
+.
 assert_equals
 (
 getComputedStyle
@@ -249,8 +334,10 @@ matrix3d
 0
 1
 0
-50
-100
+37
+.
+5
+75
 50
 1
 )
