Bug 1922710 - Run helper_fission_scroll_handoff and helper_fission_inactivescroller_under_oopif with test_group_fission on non-Android platforms r=hiro
Differential Revision: https://phabricator.services.mozilla.com/D225679

UltraBlame original commit: ca468056aca5a5994598d4835cd01521f1158db9

--- a/gfx/layers/apz/test/mochitest/test_group_fission.html
+++ b/gfx/layers/apz/test/mochitest/test_group_fission.html
@@ -303,6 +303,34 @@ push
 {
 /
 /
+Skip
+on
+Android
+because
+of
+missing
+native
+wheel
+event
+support
+"
+file
+"
+:
+"
+helper_fission_scroll_handoff
+.
+html
+"
+"
+prefs
+"
+:
+prefs
+}
+{
+/
+/
 Fails
 on
 try
@@ -354,6 +382,93 @@ max_tap_time
 }
 )
 ;
+if
+(
+getPlatform
+(
+)
+!
+=
+"
+linux
+"
+)
+{
+subtests
+.
+push
+(
+{
+/
+/
+Fails
+on
+try
+runs
+for
+Android
+and
+Linux
+/
+/
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1915378
+"
+file
+"
+:
+"
+helper_fission_inactivescroller_under_oopif
+.
+html
+"
+"
+prefs
+"
+:
+[
+[
+"
+test
+.
+events
+.
+async
+.
+enabled
+"
+true
+]
+[
+"
+apz
+.
+test
+.
+logging_enabled
+"
+true
+]
+]
+}
+)
+;
+}
 }
 if
 (
