Bug 1927404 - Fix reftests. r=hsivonen
The tests don't change rendering but the references need adjusting to match the
new css.

Differential Revision: https://phabricator.services.mozilla.com/D227062

UltraBlame original commit: b089cead5a9090168ac7a737ec8e7780874cfdb2

--- a/parser/htmlparser/tests/reftest/bug482921-2-ref.html
+++ b/parser/htmlparser/tests/reftest/bug482921-2-ref.html
@@ -65,7 +65,7 @@ highlight
 "
 >
 <
-pre
+span
 id
 >
 <
@@ -104,12 +104,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -134,12 +134,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -170,12 +170,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -206,12 +206,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -279,12 +279,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -315,12 +315,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 var
 s
@@ -394,12 +394,12 @@ span
 "
 ;
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -416,12 +416,24 @@ lt
 -
 -
 <
+/
 span
-id
 >
 <
 /
 span
+>
+<
+span
+id
+>
+<
+span
+class
+=
+"
+comment
+"
 >
 var
 s
@@ -446,12 +458,24 @@ gt
 "
 ;
 <
+/
 span
-id
 >
 <
 /
 span
+>
+<
+span
+id
+>
+<
+span
+class
+=
+"
+comment
+"
 >
 -
 -
@@ -463,12 +487,16 @@ gt
 span
 >
 <
+/
 span
-id
 >
 <
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -500,19 +528,12 @@ gt
 span
 >
 <
-span
->
-<
 /
 span
 >
 <
 span
 id
->
-<
-/
-span
 >
 <
 span
@@ -543,12 +564,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 /
 *
@@ -591,12 +612,12 @@ span
 *
 /
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -628,12 +649,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -665,12 +686,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -701,12 +722,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -799,12 +820,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -899,12 +920,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -1030,12 +1051,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -1066,12 +1087,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -1170,12 +1191,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -1276,12 +1297,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -1313,12 +1334,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -1350,12 +1371,12 @@ gt
 span
 >
 <
-span
-id
->
-<
 /
 span
+>
+<
+span
+id
 >
 <
 span
@@ -1387,16 +1408,16 @@ gt
 span
 >
 <
+/
+span
+>
+<
 span
 id
 >
 <
 /
 span
->
-<
-/
-pre
 >
 <
 !
