--- a/parser/htmlparser/tests/reftest/bug704667-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug704667-1-ref.html
@@ -65,7 +65,7 @@ highlight
 "
 >
 <
-pre
+span
 id
 >
 <
@@ -112,16 +112,16 @@ gt
 span
 >
 <
+/
+span
+>
+<
 span
 id
 >
 <
 /
 span
->
-<
-/
-pre
 >
 <
 !
@@ -132,11 +132,6 @@ source
 CSS
 matches
 the
-<
-pre
-id
->
-and
 <
 span
 id
